Cleanup and fiddle with some code.

--- a/common/Config.h.in
+++ b/common/Config.h.in
@@ -1,6 +1,8 @@
 #ifndef CLANG_PLUGIN_EXAMPLES_COMMON_CONFIG_H
 #define CLANG_PLUGIN_EXAMPLES_COMMON_CONFIG_H
 
+#define CLANG_PLUGIN_EXAMPLES_NAME "@name@"
 #define CLANG_PLUGIN_EXAMPLES_VERSION "@version@"
+#define CLANG_PLUGIN_EXAMPLES_LICENSE "@license@"
 
 #endif // CLANG_PLUGIN_EXAMPLES_COMMON_CONFIG_H
