Add plugin to demonstrat use of the Rewriter

--- a/meson.build
+++ b/meson.build
@@ -65,4 +65,5 @@ subdir('add-braces')
 subdir('ast-ir-match')
 # subdir('instrument')
 subdir('loop-demarcator')
+subdir('loop-demarcator-2')
 subdir('loop-extractor')
