Add loop demarcator plugin where the sentinel functions demarcating the loops are reflected in the IR

--- a/meson.build
+++ b/meson.build
@@ -64,8 +64,8 @@ subdir('common')
 subdir('add-braces')
 subdir('ast-ir-match')
 subdir('attributes')
-# subdir('instrument')
 subdir('loop-demarcator')
 subdir('loop-demarcator-2')
+subdir('loop-demarcator-3')
 subdir('loop-extractor')
 subdir('trace-consumer')
